--- a/web/app/themes/beagleboard/package.json
+++ b/web/app/themes/beagleboard/package.json
@@ -19,7 +19,12 @@
     "@roots/vite-plugin": "^1.0.2",
     "@tailwindcss/vite": "^4.0.9",
     "laravel-vite-plugin": "^1.2.0",
+    "sass": "^1.89.2",
     "tailwindcss": "^4.0.9",
     "vite": "^6.2.0"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.7"
   }
 }
