--- a/web/app/themes/beagleboard/composer.json
+++ b/web/app/themes/beagleboard/composer.json
@@ -42,17 +42,9 @@
         "wpackagist-theme/*"
       ]
     },
-    "1": {
-      "type": "package",
-      "package": {
-        "name": "advanced-custom-fields/advanced-custom-fields-pro",
-        "type": "wordpress-plugin",
-        "version": "6.2.1.1",
-        "dist": {
-          "type": "zip",
-          "url": "https://connect.advancedcustomfields.com/index.php?a=download&p=pro&k=NGE4MDUxYzJjOGZjMjRjYmMyMzhhYmFiN2Y3NDI3MTc1ODg0ZGIwOWZhNTkxMDU3NjZhNmE2&t=6.2.1.1"
-        }
-      }
+    "acf-pro": {
+      "type": "composer",
+      "url":"https://connect.advancedcustomfields.com"
     },
     "my-yoast": {
       "type": "composer",
@@ -69,7 +61,7 @@
       "type": "package",
       "package": {
         "name": "gravityforms/gravityforms",
-        "version": "2.8.5",
+        "version": "2.9.16",
         "type": "wordpress-plugin",
         "dist": {
           "type": "zip",
@@ -89,29 +81,29 @@
   },
   "require": {
     "php": ">=8.2",
-    "roots/acorn": "^5.0",
-    "wpackagist-plugin/safe-svg":"^2.0.3",
-    "roots/soil": "^4.0",
+    "wpengine/advanced-custom-fields-pro": "^6.5.0.1",
+    "ffraenz/private-composer-installer": "^5.0",
+    "gravityforms/gravityforms": "^2.9.16",
     "johnbillion/extended-cpts": "^4.5",
-    "wpackagist-plugin/wp-search-with-algolia": "^2.5.4",
+    "roots/acorn": "*",
+    "roots/soil": "^4.0",
+    "wpackagist-plugin/all-bootstrap-blocks": "^1.3.30",
+    "wpackagist-plugin/classic-editor": "^1.6",
+    "wpackagist-plugin/code-syntax-block": "^3.1.1",
+    "wpackagist-plugin/download-monitor": "^4.9.14",
+    "wpackagist-plugin/featured-images-for-rss-feeds": "^1.6.2",
+    "wpackagist-plugin/font-awesome": "^5.1.0",
+    "wpackagist-plugin/generateblocks": "^ 2.1.0",
+    "wpackagist-plugin/safe-svg": "^2.3.3",
+    "wpackagist-plugin/w3-total-cache": "^2.8.12",
+    "wpackagist-plugin/wordpress-importer": "^0.8.1",
+    "wpackagist-plugin/wp-discourse": "^2.4",
     "wpackagist-plugin/wp-fail2ban": "^5.2.1",
     "wpackagist-plugin/wp-fail2ban-addon-gravity-forms": "^2.0",
-    "wpackagist-plugin/featured-images-for-rss-feeds":"^1.6.2",
+    "wpackagist-plugin/wp-search-with-algolia": "^2.10.3",
     "wpackagist-plugin/youtube-embed-plus": "^14.0",
-    "advanced-custom-fields/advanced-custom-fields-pro": "^6.0",
-    "wpackagist-plugin/download-monitor":"^4.9.14",
-    "wpackagist-plugin/wp-discourse":"^2.4",
-    "wpackagist-plugin/classic-editor": "^1.6",
-    "gravityforms/gravityforms": "^2.7.14",
-    "ffraenz/private-composer-installer": "^5.0",
-    "wpackagist-plugin/code-syntax-block":"^3.1.1",
-    "yoast/wordpress-seo": "^23.1",
-    "yoast/wordpress-seo-premium": "^23.1",
-    "wpackagist-plugin/w3-total-cache": "^2.2",
-    "wpackagist-plugin/font-awesome": "^4.3",
-    "wpackagist-plugin/all-bootstrap-blocks":"^1.3.10",
-    "wpackagist-plugin/generateblocks": "^1.8",
-    "wpackagist-plugin/wordpress-importer":"^0.8.1"
+    "yoast/wordpress-seo": "^25.7",
+    "yoast/wordpress-seo-premium": "^23.1"
   },
   "require-dev": {
     "laravel/pint": "^1.20"
@@ -122,7 +114,11 @@
   "config": {
     "optimize-autoloader": true,
     "preferred-install": "dist",
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "ffraenz/private-composer-installer": true,
+      "gotoandplay/gravityforms-composer-installer": true
+    }
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
